Added springfox dependency (for Swagger) and set-up; Testing use of HttpServletRequest; Minor tweaks